fix: add new page example

--- a/docs/how-to-guides/scaffolding/new-react-application.mdx
+++ b/docs/how-to-guides/scaffolding/new-react-application.mdx
@@ -163,8 +163,29 @@ Except starting a local development server and making your React application loc
 
 Once you've completed the scaffold's wizard and the files have been created, the first steps would be to start creating new pages, in the similar fashion it's already done with the existing example pages. Simply create a new [`RoutePlugin`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/app/src/plugins/RoutePlugin.tsx#L8) plugins inside of the [`code/src/plugins`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/src/plugins) folder, and start creating your page within it, for example:
 
-```ts
-kobaja
+```tsx title="code/src/plugins/routes/myNewPage.tsx" {19-22}
+import React from "react";
+import { RoutePlugin } from "@webiny/app/plugins/RoutePlugin";
+import { Route, Link, RouteChildrenProps } from "@webiny/react-router";
+import { ReactComponent as WebinyLogo } from "../../images/webiny.svg";
+import Layout from "../../components/Layout";
+
+function MyNewPage(props: RouteChildrenProps) {
+    return (
+        <Layout className={"my-new-page"}>
+            <h1>My New Page</h1>
+            <h2>
+                This is my new page.
+            </h2>
+            <Link to={"/"}> &larr; Back</Link>
+        </Layout>
+    );
+}
+
+// We register routes via the `RoutePlugin` plugin.
+export default new RoutePlugin({
+    route: <Route path="/my-new-page" exact component={MyNewPage} />
+});
 ```
 
 Furthermore, every application has one or more layouts, so you can also start editing the [`code/src/components/Layout.tsx`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/src/components/Layout.tsx). Feel free to remove anything that's not needed. The styles for the layout can be found in the [`code/src/styles/global.scss`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/src/styles/global.scss#L33) file.
