fix: correct title and menu item label

--- a/docs/tutorials/page-builder/create-a-new-page-element.mdx
+++ b/docs/tutorials/page-builder/create-a-new-page-element.mdx
@@ -1,7 +1,7 @@
 ---
-id: create-a-new-page-builder-element
-title: Create a New Page Builder Element
-sidebar_label: Create a New Element
+id: create-a-new-page-element
+title: Create a New Page Element
+sidebar_label: Create a New Page Element
 keywords: ["webiny", "Page Builder", "landing pages", "page element"]
 description: Create a new Page Builder element.
 ---
