fix: remove "new" prefix

--- a/docs/changelog/5.13.0.mdx
+++ b/docs/changelog/5.13.0.mdx
@@ -22,9 +22,9 @@ Please check the [Webiny 5.13.0 migration guide](/docs/how-to-guides/upgrade-web
 
 The highlight of this release - we bring you three brand new scaffolds that are focused on aiding developers in custom application development. The three scaffolds are:
 
-- [New Full Stack Application](/docs/how-to-guides/scaffolding/new-full-stack-application)
-- [New GraphQL API](/docs/how-to-guides/scaffolding/new-graphql-api)
-- [New React Application](/docs/how-to-guides/scaffolding/new-react-application)
+- [Full Stack Application](/docs/how-to-guides/scaffolding/full-stack-application)
+- [GraphQL API](/docs/how-to-guides/scaffolding/graphql-api)
+- [React Application](/docs/how-to-guides/scaffolding/react-application)
 
 To get started, simply run the existing `webiny scaffold` command and pick the scaffold you need. On the other hand, if you'd like to learn more, you can check out the linked how-to guides.
 
