--- a/docs/how-to-guides/scaffolding/full-stack-application.mdx
+++ b/docs/how-to-guides/scaffolding/full-stack-application.mdx
@@ -1,13 +1,13 @@
 ---
-id: new-full-stack-application
-title: New Full Stack Application
-sidebar_label: New Full Stack Application
+id: full-stack-application
+title: Full Stack Application
+sidebar_label: Full Stack Application
 keywords: ["scaffolding", "new", "full", "stack", "application"]
-description: Learn how to use the New Full Stack Application scaffold.
+description: Learn how to use the Full Stack Application scaffold.
 ---
 
 import CenteredImage from "@components/CenteredImage";
-import gqlApiExample from "./new-full-stack-application/gql-api-example.png";
+import gqlApiExample from "./full-stack-application/gql-api-example.png";
 
 :::info Can I use this?
 
@@ -17,29 +17,29 @@ This feature is available since **v5.13.0**.
 
 :::tip What you'll learn
 
-- main features of the **New Full Stack Application** scaffold
+- main features of the **Full Stack Application** scaffold
 - how to continue developing on top of the generated application code
 
 :::
 
 ## Overview
 
-The **New Full Stack Application** scaffold creates a new full stack application which consists of a simple React application on the frontend, and the supporting GraphQL HTTP API on the backend, powered by AWS Lambda and Amazon DynamoDB.
+The **Full Stack Application** scaffold creates a new full stack application which consists of a simple React application on the frontend, and the supporting GraphQL HTTP API on the backend, powered by AWS Lambda and Amazon DynamoDB.
 
 :::note
-In order to create a new full stack application, behind the scenes, the scaffold is relying on the existing [New GraphQL API](/docs/how-to-guides/scaffolding/new-graphql-api) and [New React Application](/docs/how-to-guides/scaffolding/new-react-application) scaffolds.
+In order to create a new full stack application, behind the scenes, the scaffold is relying on the existing [GraphQL API](/docs/how-to-guides/scaffolding/graphql-api) and **React Application**](/docs/how-to-guides/scaffolding/react-application) scaffolds.
 :::
 
 ## Features
 
 ### Frontend and Backend Applications
 
-The New Full Stack Application scaffold creates everything that you might need in order to start creating a new full stack application. It creates two [project applications](/docs/key-topics/project-organization/project-applications), one that holds your frontend, and the other one that holds your backend application.
+The Full Stack Application scaffold creates everything that you might need in order to start creating a new full stack application. It creates two [project applications](/docs/key-topics/project-organization/project-applications), one that holds your frontend, and the other one that holds your backend application.
 
-The frontend application is powered by React and is created with the [New React Application](/docs/how-to-guides/scaffolding/new-react-application) scaffold. On the other hand, the backend application is powered by a GraphQL API and is created with the [New GraphQL API](/docs/how-to-guides/scaffolding/new-graphql-api) scaffold.
+The frontend application is powered by React and is created with the [React Application](/docs/how-to-guides/scaffolding/react-application) scaffold. On the other hand, the backend application is powered by a GraphQL API and is created with the [GraphQL API](/docs/how-to-guides/scaffolding/graphql-api) scaffold.
 
 :::info
-For more information on specific features that these two scaffolds include, we recommend you check out the dedicated [New React Application](/docs/how-to-guides/scaffolding/new-react-application) and [New GraphQL API](/docs/how-to-guides/scaffolding/new-graphql-api) guides.
+For more information on specific features that these two scaffolds include, we recommend you check out the dedicated [React Application](/docs/how-to-guides/scaffolding/react-application) and [GraphQL API](/docs/how-to-guides/scaffolding/graphql-api) guides.
 :::
 
 ### Clear Organization
@@ -59,14 +59,14 @@ To check out the example, start your React application locally and open it in yo
 <CenteredImage shadow={false} alt="GraphQL API Interaction Example" src={gqlApiExample} />
 
 :::info
-Check out the New React Application scaffold's [Development](/docs/how-to-guides/scaffolding/new-react-application#development-using-the-watch-command) section to learn how to start the React application locally.
+Check out the React Application scaffold's [Development](/docs/how-to-guides/scaffolding/react-application#development-using-the-watch-command) section to learn how to start the React application locally.
 :::
 
 ## Development
 
 ### Essential Files and Folders
 
-The following is brief overview of the essential files and folders that are created during the scaffolding process. For more information, we encourage you to check out the dedicated [New React Application](/docs/how-to-guides/scaffolding/new-react-application#essential-files-and-folders) and [New GraphQL API](/docs/how-to-guides/scaffolding/new-graphql-api#essential-files-and-folders) guides.
+The following is brief overview of the essential files and folders that are created during the scaffolding process. For more information, we encourage you to check out the dedicated [React Application](/docs/how-to-guides/scaffolding/react-application#essential-files-and-folders) and [GraphQL API](/docs/how-to-guides/scaffolding/graphql-api#essential-files-and-folders) guides.
 
 ```bash title="New Full Stack Application Folder (Some Files Removed for Brevity)"
 ├── api                                 # GraphQL API's project application folder.
@@ -171,11 +171,11 @@ If you're just working on one side of your application, for example on your Grap
 
 ### Extending the GraphQL API
 
-The new GraphQL API can be extended in two ways. Be sure to check the [Extending GraphQL API](/docs/how-to-guides/scaffolding/new-graphql-api#extending-the-graphql-api) section in the [New GraphQL API](/docs/how-to-guides/scaffolding/new-graphql-api) scaffold's guide.
+The new GraphQL API can be extended in two ways. Be sure to check the [Extending GraphQL API](/docs/how-to-guides/scaffolding/graphql-api#extending-the-graphql-api) section in the [GraphQL API](/docs/how-to-guides/scaffolding/graphql-api) scaffold's guide.
 
 ### Extending the React application
 
-On the React application side, you can start by creating new pages, in the similar fashion it's already done with the existing example pages. Be sure to check the [Creating First Pages](/docs/how-to-guides/scaffolding/new-react-application#creating-first-pages) section in the [New GraphQL API](/docs/how-to-guides/scaffolding/new-react-application) scaffold's guide.
+On the React application side, you can start by creating new pages, in the similar fashion it's already done with the existing example pages. Be sure to check the [Creating First Pages](/docs/how-to-guides/scaffolding/react-application#creating-first-pages) section in the [GraphQL API](/docs/how-to-guides/scaffolding/react-application) scaffold's guide.
 
 ## FAQ
 
