--- a/docs/how-to-guides/scaffolding/graphql-api.mdx
+++ b/docs/how-to-guides/scaffolding/graphql-api.mdx
@@ -1,13 +1,13 @@
 ---
-id: new-graphql-api
-title: New GraphQL API
-sidebar_label: New GraphQL API
+id: graphql-api
+title: GraphQL API
+sidebar_label: GraphQL API
 keywords: ["scaffolding", "new", "graphql", "api"]
-description: Learn how to use the New GraphQL API scaffold.
+description: Learn how to use the GraphQL API scaffold.
 ---
 
 import CenteredImage from "@components/CenteredImage";
-import cloudInfrastructureDiagram from "./new-graphql-api/new_graphql_api_scaffold.png";
+import cloudInfrastructureDiagram from "./graphql-api/new_graphql_api_scaffold.png";
 
 :::info Can I use this?
 
@@ -17,14 +17,14 @@ This feature is available since **v5.13.0**.
 
 :::tip What you'll learn
 
-- main features of the **New GraphQL API** scaffold
+- main features of the **GraphQL API** scaffold
 - how to continue developing on top of the created application code
 
 :::
 
 ## Overview
 
-The **New GraphQL API** scaffold creates a new standalone GraphQL HTTP API, which can be utilized by your frontend applications (for example, applications created with the [New React Application](/docs/how-to-guides/scaffolding/new-react-application) scaffold). Once created, you can immediately deploy it into your cloud (AWS) account and continue further development with just a couple of [Webiny CLI](/docs/key-topics/webiny-cli) commands.
+The **GraphQL API** scaffold creates a new standalone GraphQL HTTP API, which can be utilized by your frontend applications (for example, applications created with the [React Application](/docs/how-to-guides/scaffolding/react-application) scaffold). Once created, you can immediately deploy it into your cloud (AWS) account and continue further development with just a couple of [Webiny CLI](/docs/key-topics/webiny-cli) commands.
 
 ## Features
 
@@ -48,7 +48,7 @@ As shown, the scaffold also includes a single Amazon DynamoDB <diagram-letter>D<
 
 Furthermore, note that when [deploying](/docs/how-to-guides/deployment/deploy-your-project) into the `prod` (production) environment, the GraphQL Handler AWS Lambda <diagram-letter>C</diagram-letter> function will be deployed into a new [Amazon Virtual Private Cloud (VPC)](https://aws.amazon.com/vpc/). Down the line, doing this for cloud infrastructure resources can improve your GraphQL API's overall security posture.
 
-More information on different databases and this dual cloud infrastructure setup can be found in the [Development](/docs/how-to-guides/scaffolding/new-full-stack-application#development) section below.
+More information on different databases and this dual cloud infrastructure setup can be found in the [Development](/docs/how-to-guides/scaffolding/full-stack-application#development) section below.
 
 :::info
 During the scaffold's setup wizard, you will be asked if you want to immediately deploy the needed cloud infrastructure resources. If you decide not to do it, you can deploy it later, as usual, with the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project) command.
@@ -212,13 +212,13 @@ In case you missed it, every Webiny project is organized as a [monorepo](/docs/k
 
 This is also the reason why we can't just run `yarn add xyz` from our project root. We need to specify to which monorepo workspace the new library needs to be added, which can be done via the [`yarn workspace {workspace-name} add {library-name}`](https://classic.yarnpkg.com/en/docs/cli/workspace/) command.
 
-So, let's say we wanted to add the [`dataloader`](https://www.npmjs.com/package/dataloader) library to our newly created GraphQL API that's created within the `new-graphql-api` folder. To add the library, we'd use the following command:
+So, let's say we wanted to add the [`dataloader`](https://www.npmjs.com/package/dataloader) library to our newly created GraphQL API that's created within the `graphql-api` folder. To add the library, we'd use the following command:
 
 ```bash
-yarn workspace new-graphql-api add dataloader
+yarn workspace graphql-api add dataloader
 ```
 
-Note that the name of the workspace is defined in the workspace's `package.json` file, via the `name` property (traditionally used to define the package name). In case of the `new-react-app` React application, that would be in `new-graphql-api/code/graphql/package.json` file.
+Note that the name of the workspace is defined in the workspace's `package.json` file, via the `name` property (traditionally used to define the package name). In case of the `new-react-app` React application, that would be in `graphql-api/code/graphql/package.json` file.
 
 #### I want to use a different database, how do I set it up?
 
