--- a/docs/how-to-guides/scaffolding/introduction.mdx
+++ b/docs/how-to-guides/scaffolding/introduction.mdx
@@ -34,11 +34,11 @@ Out of the box, Webiny offers a couple of scaffolding tools, or in short, scaffo
 
 The following is a list of currently available scaffolds:
 
-- [New Full Stack Application](/docs/how-to-guides/scaffolding/new-full-stack-application)
-- [New GraphQL API](/docs/how-to-guides/scaffolding/new-graphql-api)
+- [Full Stack Application](/docs/how-to-guides/scaffolding/full-stack-application)
+- [GraphQL API](/docs/how-to-guides/scaffolding/graphql-api)
 - [Extend GraphQL API](/docs/how-to-guides/scaffolding/extend-graphql-api)
 - [Extend Admin Area](/docs/how-to-guides/scaffolding/extend-admin-area)
-- [New React Application](/docs/how-to-guides/scaffolding/new-react-application)
+- [React Application](/docs/how-to-guides/scaffolding/react-application)
 - [Set up CI/CD](/docs/how-to-guides/scaffolding/ci-cd)
 - React Component Package
 
