--- a/docs/how-to-guides/scaffolding/react-application.mdx
+++ b/docs/how-to-guides/scaffolding/react-application.mdx
@@ -1,14 +1,14 @@
 ---
-id: new-react-application
-title: New React Application
-sidebar_label: New React Application
+id: react-application
+title: React Application
+sidebar_label: React Application
 keywords: ["scaffolding", "new", "react", "application"]
-description: Learn how to use the New React Application scaffold.
+description: Learn how to use the React Application scaffold.
 ---
 
 import CenteredImage from "@components/CenteredImage";
-import cloudInfrastructureDiagram from "./new-react-application/new_react_app_scaffold.png";
-import preview from "./new-react-application/preview.png";
+import cloudInfrastructureDiagram from "./react-application/new_react_app_scaffold.png";
+import preview from "./react-application/preview.png";
 
 :::info Can I use this?
 
@@ -18,14 +18,14 @@ This feature is available since **v5.13.0**.
 
 :::tip What you'll learn
 
-- main features of the **New React Application** scaffold
+- main features of the **React Application** scaffold
 - how to continue developing on top of the created application code
 
 :::
 
 ## Overview
 
-As the name suggests, the **New React Application** scaffold creates a new standalone React application, on top of which you can build new [client-side rendered (CSR)](https://developers.google.com/web/updates/2019/02/rendering-on-the-web) applications. This setup is ideal for secured and non-public-facing applications that do not need to be [SEO](https://developers.google.com/search/docs/beginner/seo-starter-guide?hl=en%2F&visit_id=637648024549328679-3615718033&rd=1) compatible.
+As the name suggests, the **React Application** scaffold creates a new standalone React application, on top of which you can build new [client-side rendered (CSR)](https://developers.google.com/web/updates/2019/02/rendering-on-the-web) applications. This setup is ideal for secured and non-public-facing applications that do not need to be [SEO](https://developers.google.com/search/docs/beginner/seo-starter-guide?hl=en%2F&visit_id=637648024549328679-3615718033&rd=1) compatible.
 
 The created application also includes a couple of simple pages and examples which makes it possible to quickly get started with building a new frontend application.
 
@@ -194,7 +194,7 @@ Furthermore, every application has one or more layouts, so you can also start ed
 
 Out of the box, the new React application scaffold also includes the [Apollo GraphQL (v2)](https://www.apollographql.com/docs/react/v2) client, which you can use to perform queries and mutations against an existing GraphQL API.
 
-But, unless the new React application was created with the [New Full-Stack Application](/docs/how-to-guides/scaffolding/new-full-stack-application) scaffold, you will have to manually link your React application with an existing GraphQL API.
+But, unless the new React application was created with the [New Full-Stack Application](/docs/how-to-guides/scaffolding/full-stack-application) scaffold, you will have to manually link your React application with an existing GraphQL API.
 
 For example, let's say our application needs to interact with the main GraphQL API that's, by default, set up with every Webiny project and is deployed as part of the **API** project application, located within the [`api`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cwp-template-aws/template/api) folder.
 
@@ -215,7 +215,7 @@ const NO_ENV_MESSAGE = `Please specify the environment via the "--env" argument,
 
 // Exports fundamental watch and build commands.
 // Need to inject environment variables or link your application with an existing GraphQL API?
-// See https://www.webiny.com/docs/how-to-guides/scaffolding/new-react-application/webiny-config.
+// See https://www.webiny.com/docs/how-to-guides/scaffolding/react-application/webiny-config.
 export default {
   commands: {
     async watch(options, context) {
@@ -240,7 +240,7 @@ export default {
 As shown, within both commands, we rely on the deployed GraphQL API (`api`) and its stack output to retrieve the URL over which the GraphQL API is accessible. If needed, additional values can be retrieved too, but keep in mind that they need to be exported in the cloud infrastructure code, in [`api/pulumi/dev/index.ts`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cwp-template-aws/template/api/pulumi/dev/index.ts#L127) and [`api/pulumi/prod/index.ts`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cwp-template-aws/template/api/pulumi/prod/index.ts#L133) files.
 
 :::info
-The same steps would have to be followed if we wanted to link our React application with the Headless CMS GraphQL API or maybe with a new standalone GraphQL API, created with the [New GraphQL API](/docs/how-to-guides/scaffolding/new-graphql-api) scaffold. The only thing that would change is the folder that's being passed to the `getStackOutput` function.
+The same steps would have to be followed if we wanted to link our React application with the Headless CMS GraphQL API or maybe with a new standalone GraphQL API, created with the [GraphQL API](/docs/how-to-guides/scaffolding/graphql-api) scaffold. The only thing that would change is the folder that's being passed to the `getStackOutput` function.
 :::
 
 ## FAQ
@@ -249,7 +249,7 @@ The same steps would have to be followed if we wanted to link our React applicat
 
 No.
 
-The **New React Application** scaffold creates a new standalone React application, on top of which you can build [client-side rendered (CSR)](https://developers.google.com/web/updates/2019/02/rendering-on-the-web) applications. This is ideal for secured and non-public-facing applications that do not need to be [SEO](https://developers.google.com/search/docs/beginner/seo-starter-guide?hl=en%2F&visit_id=637648024549328679-3615718033&rd=1) compatible.
+The **React Application** scaffold creates a new standalone React application, on top of which you can build [client-side rendered (CSR)](https://developers.google.com/web/updates/2019/02/rendering-on-the-web) applications. This is ideal for secured and non-public-facing applications that do not need to be [SEO](https://developers.google.com/search/docs/beginner/seo-starter-guide?hl=en%2F&visit_id=637648024549328679-3615718033&rd=1) compatible.
 
 If you need server-side rendering (SSR), then you might want to look into other frameworks, such as [Next.js](https://nextjs.org/docs/basic-features/pages#server-side-rendering).
 
