fix: add deploy command example

--- a/docs/how-to-guides/scaffolding/full-stack-application.mdx
+++ b/docs/how-to-guides/scaffolding/full-stack-application.mdx
@@ -131,7 +131,7 @@ Contains plugins, like [`RoutePlugin`](https://github.com/webiny/webiny-js/blob/
 
 This is the folder that contains all of the React application's cloud infrastructure code.
 
-### Deployments
+### Deployment
 
 Once you've completed the scaffold's wizard and the files have been created, in order to actually access the GraphQL API, you need to deploy it. This can be done as usual via the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project) command, or, even easier, if you're about to jump straight into coding, by running the [`webiny watch`](/docs/how-to-guides/use-watch-command) command. This command will not only deploy the changes, but also start a new watch session, which will automatically redeploy further application code changes, as you perform them (more on this below).
 
