--- a/docs/how-to-guides/scaffolding/graphql-api.mdx
+++ b/docs/how-to-guides/scaffolding/graphql-api.mdx
@@ -142,9 +142,19 @@ Note that, by default, the cloud infrastructure code in the [`prod`](https://git
 Learn more about Pulumi, the default infrastructure-as-code (IaC) framework Webiny relies on, in the [Infrastructure as code with Pulumi](/docs/key-topics/deployment/iac-with-pulumi) key topic.
 :::
 
-### First Deploy
+### Deployment
 
-Once you've completed the scaffold's wizard and the files have been created, in order to actually access the GraphQL API, you need to deploy it. This can be done as usual via the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project) command, or, even easier, if you're about to jump straight into coding, by running the [`webiny watch`](/docs/how-to-guides/use-watch-command) command. This command will not only deploy the changes, but also start a new watch session, which will automatically redeploy further application code changes, as you perform them. More on this below.
+Once you've completed the scaffold's wizard and the files have been created, in order to actually access the GraphQL API, you need to deploy it. This can be done as usual via the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project) command, or, even easier, if you're about to jump straight into coding, by running the [`webiny watch`](/docs/how-to-guides/use-watch-command) command. This command will not only deploy the changes, but also start a new watch session, which will automatically redeploy further application code changes, as you perform them (more on this below).
+
+In order to deploy your GraphQL API, you need to run the following command:
+
+```bash title="Deploying GraphQL API"
+yarn webiny deploy {graphql-api-path} --env {env}
+```
+
+:::info
+During the scaffold's setup wizard, you will be asked if you want to immediately deploy the needed cloud infrastructure resources. If you decide not to do it, you can deploy it later, as usual, with the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project) command.
+:::
 
 ### Development Using the Watch Command
 
@@ -163,6 +173,7 @@ And although developers often choose this approach when developing smaller featu
 :::tip
 To learn more about how to write different types of tests, we recommend you check out the [Writing and Running Tests](/docs/how-to-guides/scaffolding/extend-graphql-api#writing-and-running-tests) section in the [Extend GraphQL API](/docs/how-to-guides/scaffolding/extend-graphql-api) guide.
 :::
+
 
 ### Extending the GraphQL API
 
