--- a/docs/how-to-guides/scaffolding/react-application.mdx
+++ b/docs/how-to-guides/scaffolding/react-application.mdx
@@ -141,11 +141,17 @@ This is the folder that contains all of the cloud infrastructure code. You're fr
 Learn more about Pulumi, the default infrastructure-as-code (IaC) framework Webiny relies on, in the [Infrastructure as code with Pulumi](/docs/key-topics/deployment/iac-with-pulumi) key topic.
 :::
 
-### No Initial Deployment Needed
+### Deployment
 
 As mentioned above, frontend application development can still be performed locally, on the developer's machine.
 
 Which means no initial deployment is needed. Once you've completed the scaffold's wizard and the files have been created, in order to start developing, you can simply start by running the [`webiny watch`](/docs/how-to-guides/use-watch-command) command (see below). Only when you actually want to see your application online, you can proceed as usual, by running the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project) command.
+
+In order to deploy your React application, you need to run the following command:
+
+```bash title="Deploying React Application"
+yarn webiny deploy {react-application-path} --env {env}
+```
 
 ### Development Using the Watch Command
 
