fix: correct link

--- a/docs/how-to-guides/scaffolding/full-stack-application.mdx
+++ b/docs/how-to-guides/scaffolding/full-stack-application.mdx
@@ -27,7 +27,7 @@ This feature is available since **v5.13.0**.
 The **Full Stack Application** scaffold creates a new full stack application which consists of a simple React application on the frontend, and the supporting GraphQL HTTP API on the backend, powered by AWS Lambda and Amazon DynamoDB.
 
 :::note
-In order to create a new full stack application, behind the scenes, the scaffold is relying on the existing [GraphQL API](/docs/how-to-guides/scaffolding/graphql-api) and **React Application**](/docs/how-to-guides/scaffolding/react-application) scaffolds.
+In order to create a new full stack application, behind the scenes, the scaffold is relying on the existing [GraphQL API](/docs/how-to-guides/scaffolding/graphql-api) and [React Application](/docs/how-to-guides/scaffolding/react-application) scaffolds.
 :::
 
 ## Features
