--- a/docs/how-to-guides/extend-graphql-api.mdx
+++ b/docs/how-to-guides/extend-graphql-api.mdx
@@ -72,7 +72,12 @@ The following is an example of a simple [`GraphQLSchemaPlugin`](https://github.c
 ```ts title="api/code/graphql/src/plugins/books.ts"
 import { GraphQLSchemaPlugin } from "@webiny/handler-graphql/plugins";
 
-export default new GraphQLSchemaPlugin({
+// Make sure to import the `Context` interface and pass it to the `GraphQLSchemaPlugin`
+// plugin. Apart from making your application code type-safe, it will also make the
+// interaction with the `context` object significantly easier.
+import { Context } from "~/types";
+
+export default new GraphQLSchemaPlugin<Context>({
   // Extend the `Query` type with the `Book` type and `listBooks` query field,
   // which returns a list of all books previously saved in the database.
   typeDefs: /* GraphQL */ `
