--- a/docs/how-to-guides/webiny-applications/page-builder/extend-page-settings.mdx
+++ b/docs/how-to-guides/webiny-applications/page-builder/extend-page-settings.mdx
@@ -49,6 +49,11 @@ import { GraphQLSchemaPlugin } from "@webiny/handler-graphql/plugins";
 import { PagePlugin } from "@webiny/api-page-builder/plugins/PagePlugin";
 import { Page } from "@webiny/api-page-builder/types";
 
+// Make sure to import the `Context` interface and pass it to the `GraphQLSchemaPlugin`
+// plugin. Apart from making your application code type-safe, it will also make the
+// interaction with the `context` object significantly easier.
+import { Context } from "~/types";
+
 // We need this interface for the PagePlugin below.
 // It will enable you to have proper autocomplete on your new fields.
 interface PageWithPassword extends Page {
@@ -61,7 +66,7 @@ interface PageWithPassword extends Page {
 
 export default [
   // Add `password` to the page settings types
-  new GraphQLSchemaPlugin({
+  new GraphQLSchemaPlugin<Context>({
     typeDefs: /* GraphQL */ `
       extend type PbGeneralPageSettings {
         password: String
@@ -222,8 +227,13 @@ The following example shows how you can add the new `password` field into the ES
 import { GraphQLSchemaPlugin } from "@webiny/handler-graphql/plugins";
 import { IndexPageDataPlugin } from "@webiny/api-page-builder/plugins/IndexPageDataPlugin";
 
+// Make sure to import the `Context` interface and pass it to the `GraphQLSchemaPlugin`
+// plugin. Apart from making your application code type-safe, it will also make the
+// interaction with the `context` object significantly easier.
+import { Context } from "~/types";
+
 export default [
-  new GraphQLSchemaPlugin({
+  new GraphQLSchemaPlugin<Context>({
     typeDefs: /* GraphQL */ `
       extend type PbPageListItem {
         password: String
