--- a/docs/how-to-guides/scaffolding/react-application.mdx
+++ b/docs/how-to-guides/scaffolding/react-application.mdx
@@ -169,7 +169,7 @@ Except starting a local development server and making your React application loc
 
 Once you've completed the scaffold's wizard and the files have been created, the first steps would be to start creating new pages, in the similar fashion it's already done with the existing example pages. Simply create a new [`RoutePlugin`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/app/src/plugins/RoutePlugin.tsx#L8) plugins inside of the [`code/src/plugins`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/src/plugins) folder, and start creating your page within it, for example:
 
-```tsx title="code/src/plugins/routes/myNewPage.tsx" {19-22}
+```tsx title="code/src/plugins/routes/myNewPage.tsx"
 import React from "react";
 import { RoutePlugin } from "@webiny/app/plugins/RoutePlugin";
 import { Route, Link, RouteChildrenProps } from "@webiny/react-router";
@@ -208,7 +208,7 @@ In order to do this, upon starting a new watch session or building our applicati
 
 So, we need to add the following lines into the [`code/webiny.config.ts`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/webiny.config.ts):
 
-```ts title="webiny.config.ts" {1,3,5,6,7,9,17-21,27-31}
+```ts title="webiny.config.ts" {1,3,5,6,7,9,17-18,24-25}
 import invariant from "invariant";
 import { startApp, buildApp } from "@webiny/project-utils";
 import { getStackOutput } from "@webiny/cli-plugin-deploy-pulumi/utils";
