--- a/docs/changelog/5.13.0.mdx
+++ b/docs/changelog/5.13.0.mdx
@@ -68,7 +68,7 @@ The existing guides that cover extending GraphQL APIs were also updated, so make
 ### Yarn 3 Support ([#1862](https://github.com/webiny/webiny-js/pull/1862))
 You can now use [Yarn 3](https://github.com/yarnpkg/berry) with your existing projects, and all new Webiny projects will be created with Yarn 3. Yarn project is using the codename **berry** for all their releases. To prevent unexpected problems as major version releases occur, our CLI and **create-webiny-project** utility will have the supported versions of Yarn whitelisted. Currently, we allow versions 2 and 3, and we'll keep adding new versions when they arrive, only after thorough testing.
 
-### Custom AWS Profiles Work Now Work As Expected ([#1839](https://github.com/webiny/webiny-js/pull/1839))
+### Non-default AWS Profiles Now Work As Expected ([#1839](https://github.com/webiny/webiny-js/pull/1839))
 
 When specifying a non-default AWS profile via an environment variable, for example via the root `.env` file, users would experience an issue at the end of the project deployment. More specifically, after all of the cloud infrastructure resources of the **Website** project application were deployed, several AWS Lambda function invocations would fail, because the AWS profile wasn't properly assumed.
 
