fix: correct upgrade command

--- a/docs/how-to-guides/upgrade-webiny/5.12.0-to-5.13.0.mdx
+++ b/docs/how-to-guides/upgrade-webiny/5.12.0-to-5.13.0.mdx
@@ -41,7 +41,7 @@ Before moving on, make sure you commit all your changes.
 The next step is to run the project upgrade:
 
 ```bash
-yarn webiny upgrade 5.13.0
+yarn webiny upgrade
 ```
 
 Once the upgrade command has finished, you can run the [`git status`](https://git-scm.com/docs/git-status) command to see all changes that the command performed.
